--- a/frontend/public/locales/en/root.json
+++ b/frontend/public/locales/en/root.json
@@ -3,6 +3,8 @@
     "auth_links.login": "Login",
     "auth_links.register": "Register",
     "auth_links.logout": "Logout",
+    "auth_links.welcome": "Welcome",
+    "auth_links.guest": "Guest",
     "nav_links.home": "Home",
     "nav_links.market": "Market",
     "nav_links.users": "Users",
