Added Update Item page & functionality
Implement patchRequest service to handle partial updated.

Implement useUpdateItemForm hooks to handle page logic.

Update Market Page UI to display a content based on user role.

--- a/frontend/public/locales/en/market-page.json
+++ b/frontend/public/locales/en/market-page.json
@@ -11,6 +11,7 @@
     "messages.no_items_available": "No items available",
     "messages.purchase_not_available": "Purchase feature is not available",
     "btn.purchase": "Purchase",
+    "btn.edit": "Edit",
     "btn.delete": "Delete",
     "btn.add_item": "Add Item"
 }
