--- a/frontend/public/locales/en/users-page.json
+++ b/frontend/public/locales/en/users-page.json
@@ -1,12 +1,18 @@
 {
-    "columns.id":"ID",
-    "columns.username":"User Name",
-    "columns.email":"Email",
-    "columns.budget":"Budget",
-    "columns.options":"Options",
-    "btn.edit": "Edit",
-    "btn.delete": "Delete",
-    "messages.error_fetching_users": "Error fetching users",
-    "messages.no_users_available": "No users available",
-    "messages.feature_not_available": "This Feature Unavailable"
+    "columns": {
+        "id": "ID",
+        "username": "User Name",
+        "email": "Email",
+        "budget": "Budget",
+        "options": "Options"
+    },
+    "btn": {
+        "edit": "Edit",
+        "delete": "Delete"
+    },
+    "messages": {
+        "error_fetching_users": "Error fetching users",
+        "no_users_available": "No users available",
+        "feature_not_available": "This Feature Unavailable"
+    }
 }
