--- a/frontend/public/locales/en/create-item.json
+++ b/frontend/public/locales/en/create-item.json
@@ -6,6 +6,7 @@
         "description": "Description",
         "image": "Image",
         "quantity": "Quantity",
+        "category": "Category",
         "save": "Save"
     },
     "required": {
@@ -13,11 +14,13 @@
         "price": "Price is required",
         "barcode": "Barcode is required",
         "description": "Description is required",
-        "image":"Image is required",
-        "quantity": "Quantity is required"
+        "image": "Image is required",
+        "quantity": "Quantity is required",
+        "category": "Category is required"
     },
     "error": {
         "create": "Error while creating item.",
-        "image_upload":"Error while uploading image."
+        "image_upload": "Error while uploading image.",
+        "fetch_categories": "Error while fetch categories."
     }
 }
