--- a/frontend/public/locales/en/root.json
+++ b/frontend/public/locales/en/root.json
@@ -13,6 +13,7 @@
         "home": "Home",
         "market": "Market",
         "users": "Users",
+        "categories": "Categories",
         "app_name": "FourMed"
     }
 }
