--- a/frontend/public/locales/en/login-page.json
+++ b/frontend/public/locales/en/login-page.json
@@ -1,10 +1,19 @@
 {
-    "username_label": "User Name",
-    "password_label": "Password",
-    "sign_in": "Sign In",
-    "do_not_have_account": "Don't have an account?",
-    "sign_up": "Sign Up",
-    "username_required": "Username is required",
-    "password_required": "Password is required",
-    "invalid_data": "Invalid username or password."
+    "labels": {
+        "username": "User Name",
+        "password": "Password",
+        "sign_in": "Sign In",
+        "sign_up": "Sign Up",
+        "remember_me": "Remember Me",
+        "do_not_have_account": "Don't have an account?",
+        "forget_password": "Forget Password"
+    },
+    "messages": {
+        "invalid_data": "Invalid username or password.",
+        "welcome": "Welcome, please sign in to continue"
+    },
+    "required": {
+        "username": "Username is required",
+        "password": "Password is required"
+    }
 }
