--- a/frontend/public/locales/en/market-page.json
+++ b/frontend/public/locales/en/market-page.json
@@ -7,6 +7,7 @@
         "price": "Price",
         "description": "Description",
         "quantity": "Quantity",
+        "category": "Category",
         "options": "Options"
     },
     "messages": {
