--- a/frontend/public/locales/en/register-page.json
+++ b/frontend/public/locales/en/register-page.json
@@ -1,14 +1,22 @@
 {
-    "username_label": "User Name",
-    "email_label": "Email",
-    "password_label": "Password",
-    "confirm_password_label": "Confirm Password",
-    "create_account_btn": "Create Account",
-    "already_have_account": "Already have an account?",
-    "sign_in": "Sign In",
-    "username_required": "Username is required",
-    "email_required": "Email is required",
-    "password_required": "Password is required",
-    "password_do_not_match": "Passwords do not match",
-    "register_error": "An unknown error occurred."
+    "labels": {
+        "sign_up": "Sign Up",
+        "username": "User Name",
+        "email": "Email",
+        "password": "Password",
+        "confirm_password": "Confirm Password",
+        "create_account_btn": "Create Account",
+        "sign_in": "Sign In",
+        "already_have_account": "Already have an account?"
+    },
+    "messages": {
+        "welcome": "Welcome, Let's create your account",
+        "password_do_not_match": "Passwords do not match",
+        "register_error": "An unknown error occurred."
+    },
+    "required": {
+        "username": "Username is required",
+        "email": "Email is required",
+        "password": "Password is required"
+    }
 }
